# usenet-ipfs

./: AGENTS.md  CLAUDE.md  Dockerfile  README.md  RUNBOOK.md  justfile
.github/workflows/: ci.yml  docker.yml
crates/auth/src/: config.rs  oidc.rs
crates/core/src/: article.rs  audit.rs  circuit_breaker.rs  db_pool.rs  env.rs  hlc.rs  lib.rs  util.rs  validation.rs
crates/core/src/group_log/: append.rs  backfill.rs  mod.rs  reconcile.rs  sqlite_storage.rs  storage.rs  storage_tests.rs  types.rs  verify.rs
crates/core/src/ipld/: builder.rs  cid_util.rs  header_map.rs  metadata.rs  root_node.rs  test_vectors.rs
crates/core/tests/: crdt_properties.rs
crates/ctl/src/: main.rs
crates/imap/src/: config.rs  main.rs
crates/imap/src/session/: mailbox.rs
crates/imap/tests/: e2e_smoke.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/tests/: admin_endpoints_test.rs  nntp_conformance.rs  postgres_migrations.rs  startup_guard.rs  two_process_harness.rs
crates/lmdb/src/: lib.rs
crates/mail/: Cargo.toml  config.example.toml
crates/mail/migrations/: 0001_users.sql  0003_user_flags.sql  0005_bearer_tokens.sql  0010_mailbox_messages.sql  0011_drop_user_id_mailboxes.sql  0012_drop_user_id_messages.sql  0013_user_scope_state.sql  0014_mta_sts_cache.sql  DIALECT_NOTES.md
crates/mail/migrations_mysql/: 0001_users.sql  0002_subscriptions.sql  0003_user_flags.sql  0004_state_version.sql  0005_bearer_tokens.sql  0006_change_log.sql  0007_activitypub_followers.sql  0008_activitypub_received.sql  0009_user_mailboxes.sql  0010_mailbox_messages.sql  0011_drop_user_id_mailboxes.sql  0012_drop_user_id_messages.sql  0013_user_scope_state.sql  0014_mta_sts_cache.sql  0015_drop_mta_sts_cache.sql  README.md
crates/mail/migrations_pg/: DIALECT_NOTES.md
crates/mail/src/: auth_token.rs  blob.rs  config.rs  lib.rs  main.rs  metrics.rs  server.rs  upload.rs
crates/mail/src/activitypub/: inbound.rs  inbox.rs  outbound.rs
crates/mail/src/email/: get.rs  set.rs
crates/mail/src/jmap/: backend.rs  backend_types.rs  mod.rs
crates/mail/src/mailbox/: set.rs
crates/mail/src/state/: change_log.rs  flags.rs  subscriptions.rs  version.rs
crates/mail/src/store/: mod.rs  oracle.rs  sqlx_impl.rs
crates/mail/tests/: bearer_tokens.rs  feed_endpoints.rs  jmap_auth_cross_account.rs  jmap_basic_auth.rs  jmap_e2e.rs  security_headers.rs
crates/reader/: config.example.toml
crates/reader/src/: admin.rs  config.rs  main.rs  tls.rs
crates/reader/src/post/: ipfs_write.rs  log_append.rs  smtp_relay.rs
crates/reader/src/session/: command.rs  context.rs  dispatch.rs  lifecycle.rs  response.rs
crates/reader/src/store/: article_numbers.rs  mod.rs  server_stores.rs  staging_fallback.rs
crates/sieve-native/: Cargo.toml
crates/sieve-native/src/: evaluator.rs  form.rs  lib.rs  message.rs  parse_error.rs
crates/sieve-native/tests/: cross_validate.rs
crates/smtp/: Cargo.toml  config.example.toml
crates/smtp/src/: auth.rs  config.rs  lib.rs  main.rs  metrics.rs  mta_sts_dns.rs  mta_sts_error.rs  mta_sts_fetcher.rs  mta_sts_policy.rs  outbound_mailer.rs  queue.rs  relay_client.rs  relay_error.rs  relay_health.rs  relay_queue.rs  routing_mailer.rs  server.rs  ses_mailer.rs  session.rs  sieve_admin.rs  tls.rs  tlsrpt.rs
crates/smtp/tests/: auth_plain.rs  sieve_native_e2e.rs  smtps_implicit_tls.rs
crates/tls/: Cargo.toml
crates/tls/src/: lib.rs
crates/transit/: Cargo.toml
crates/transit/migrations/: 20260503000001_hlc_checkpoint_node_id.sql  20260503000002_pinned_cids.sql  20260503000003_suck_pull_cursor.sql
crates/transit/migrations_pg/: 20260503000001_hlc_checkpoint_node_id.sql  20260503000002_pinned_cids.sql  20260503000003_suck_pull_cursor.sql
crates/transit/src/: admin.rs  block_cache.rs  config.rs  group_metrics.rs  hlc_persist.rs  lib.rs  main.rs  reload.rs  rnews_config.rs  rnews_main.rs
crates/transit/src/cli/: key_rotate.rs  ops.rs
crates/transit/src/import/: mod.rs  reindex.rs  rnews.rs  suck_pull.rs
crates/transit/src/peering/: blacklist.rs  ingestion.rs  pipeline.rs  rados_store.rs
crates/transit/src/retention/: gc_candidates.rs  ipns_publisher.rs
crates/transit/tests/: fault_ipfs_unavailable.rs  fault_sqlite_failure.rs  reload.rs  remote_pin_jobs.rs  rnews_ingest.rs
crates/verify/src/: dkim.rs  store.rs  x_sig.rs
docs/ops/: ec2_s3_runbook.md
