[package]
name = "stoa-integration-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

# This crate has no library. All content is in [[test]] targets.

[dev-dependencies]
stoa-auth = { path = "../auth" }
stoa-transit = { path = "../transit" }
stoa-reader = { path = "../reader" }
stoa-core = { path = "../core" }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tempfile = "3"
sqlx = { version = "0.8", features = ["sqlite", "postgres", "any", "runtime-tokio-rustls"] }
async-trait = "0.1"
cid = "0.11"
multihash-codetable = { version = "0.2", features = ["sha2"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.4"
base64 = "0.22"
toml = "0.8"
serde_json = "1"
stoa-mail = { path = "../mail" }
stoa-verify = { path = "../verify" }
mail-auth = "0.8"
