[package]
name = "stoa-mail"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "stoa_mail"
path = "src/lib.rs"

[[bin]]
name = "stoa-mail"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "postgres", "any", "runtime-tokio-rustls", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
cid = { version = "0.11", features = ["serde-codec"] }
data-encoding = "2"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
multihash-codetable = { version = "0.2", features = ["sha2"] }
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
bytes = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
rand_core = { version = "0.6", features = ["getrandom"] }
subtle = "2"
mailparse = "0.15"
secretx = { workspace = true }
stoa-core = { path = "../core" }
stoa-tls = { path = "../tls" }
stoa-reader = { path = "../reader" }
stoa-auth = { path = "../auth" }
stoa-smtp = { path = "../smtp" }
jmap-types  = { path = "../../../JMAP/crate-jmap-types" }
jmap-server = { path = "../../../JMAP/crate-jmap-server" }
serde_ipld_dagcbor = "0.6"
async-trait = "0.1"
chrono = "0.4"
prometheus = "0.14"
tower-http = { version = "0.6", features = ["cors", "set-header"] }

[features]
aws   = ["secretx/aws-sm", "secretx/aws-ssm"]
azure = ["secretx/azure-kv"]
gcp   = ["secretx/gcp-sm"]

[dev-dependencies]
bcrypt = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
stoa-smtp = { path = "../smtp" }
