[package]
name = "stoa-sieve-native"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[dependencies]
# fancy-regex pinned at 0.13.  Before upgrading: run all evaluator::tests::glob_*
# unit tests to confirm glob-to-regex conversion is unchanged, then cross-check
# a sample of sieve scripts against the stoa-sieve (AGPL) reference evaluator.
fancy-regex = "0.13"
lru = "0.18"
tracing = "0.1"

[dev-dependencies]
stoa-sieve = { path = "../sieve" }
