[package]
name = "stoa-smtp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "stoa_smtp"
path = "src/lib.rs"

[[bin]]
name = "stoa-smtp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rustls = { version = "0.23", features = ["std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
mail-auth = "0.8"
mail-parser = "0.11"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
axum = "0.8"
subtle = "2"
secretx = { workspace = true }
stoa-core = { path = "../core" }
stoa-tls = { path = "../tls" }
stoa-sieve-native = { path = "../sieve-native" }
stoa-auth = { path = "../auth" }
base64 = "0.22"
data-encoding = "2"
sha2 = "0.10"
ipnet = { version = "2", features = ["serde"] }
webpki-roots = "0.26"
pin-project = "1"
serde_json = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
prometheus = { version = "0.14", default-features = false }
zeroize = "1"
hickory-resolver = "=0.26.0-alpha.1"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
bytes = "1"
# Optional SES dependencies — pulled in only under the 'ses' feature.
aws-sdk-sesv2 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[features]
aws   = ["secretx/aws-sm", "secretx/aws-ssm"]
azure = ["secretx/azure-kv"]
gcp   = ["secretx/gcp-sm"]
ses   = ["aws-sdk-sesv2", "aws-config"]

[dev-dependencies]
bcrypt = "0.15"
rcgen = "0.13"
# test-util enables tokio::time::pause() and tokio::time::advance() for
# deterministic timeout testing without real sleeps.
tokio = { version = "1", features = ["test-util"] }
wiremock = "0.6"
