[package]
name = "stoa-transit"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "stoa_transit"
path = "src/lib.rs"

[[bin]]
name = "stoa-transit"
path = "src/main.rs"

[[bin]]
name = "stoa-rnews"
path = "src/rnews_main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
stoa-core = { path = "../core" }
secretx = { workspace = true }
chrono = { version = "0.4", features = ["clock", "serde"] }
cron = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
cid = "0.11"
hex = "0.4"
sqlx = { version = "0.8", features = ["sqlite", "postgres", "any", "runtime-tokio-rustls", "macros", "migrate"] }
async-trait = "0.1"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
multihash-codetable = { version = "0.2", features = ["sha2"] }
prometheus = "0.14"
subtle = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-rustls = "0.26"
stoa-tls = { path = "../tls" }
stoa-verify = { path = "../verify" }
mail-auth = "0.8"
stoa-lmdb = { path = "../lmdb" }
rocksdb = "0.22"
ceph = { version = "3.2.5", optional = true }
nix = { version = "0.18", optional = true }
object_store = { version = "0.12", features = ["aws", "azure", "gcp", "http"] }
bytes = "1.11.1"
flate2 = "1"
thiserror = "1"
opentelemetry = { version = "0.31", features = ["metrics", "trace", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "trace", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "trace", "logs", "http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.31"

[features]
# Enable native Ceph RADOS block store backend.
# Requires librados-dev to be installed at build time.
rados = ["dep:ceph", "dep:nix"]
aws   = ["secretx/aws-sm", "secretx/aws-ssm"]
azure = ["secretx/azure-kv"]
gcp   = ["secretx/gcp-sm"]

[[bench]]
name = "ihave_throughput"
harness = false

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
multihash-codetable = { version = "0.2", features = ["sha2"] }
proptest = "1"
wiremock = "0.6"
